[gd_scene load_steps=15 format=2]

[ext_resource path="res://GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://sprites/Barra-vazia4V2.0.png (3).png" type="Texture" id=2]
[ext_resource path="res://sprites/Barra-preenchimentov2.png" type="Texture" id=3]
[ext_resource path="res://sprites/Barra-vaziav2.png" type="Texture" id=4]
[ext_resource path="res://sprites/Barra-preenchimento3.png" type="Texture" id=5]
[ext_resource path="res://sprites/barra-fundov2.png" type="Texture" id=6]
[ext_resource path="res://sprites/barra-fundo2.png" type="Texture" id=7]
[ext_resource path="res://sprites/Barra-preenchimento.2png.png" type="Texture" id=8]
[ext_resource path="res://sprites/barra-fundo3.png" type="Texture" id=9]
[ext_resource path="res://sprites/Barra-preenchimentoGRANDE.png.png" type="Texture" id=10]
[ext_resource path="res://sprites/barra-fundo4_1.png" type="Texture" id=11]
[ext_resource path="res://sprites/water2.png" type="Texture" id=12]
[ext_resource path="res://sprites/saco2.png" type="Texture" id=13]
[ext_resource path="res://sprites/espirito.png" type="Texture" id=14]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Container" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="FinalResourceBar" type="TextureProgress" parent="Container"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 192.0
margin_right = 420.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 20.0
texture_under = ExtResource( 11 )
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 10 )
nine_patch_stretch = true

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
margin_left = 50.0
margin_top = 10.0
margin_right = 430.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Container/HBoxContainer"]
margin_right = 124.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Container/HBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 23.0
margin_bottom = 28.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 13 )
stretch_mode = 3

[node name="Resource1Bar" type="TextureProgress" parent="Container/HBoxContainer/HBoxContainer"]
margin_left = 27.0
margin_right = 124.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Container/HBoxContainer"]
margin_left = 128.0
margin_right = 252.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Container/HBoxContainer/HBoxContainer2"]
margin_right = 11.0
margin_bottom = 28.0
texture = ExtResource( 12 )

[node name="Resource2Bar" type="TextureProgress" parent="Container/HBoxContainer/HBoxContainer2"]
margin_left = 15.0
margin_right = 124.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 7 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Container/HBoxContainer"]
margin_left = 256.0
margin_right = 380.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Container/HBoxContainer/HBoxContainer3"]
margin_top = 7.0
margin_right = 17.0
margin_bottom = 28.0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 14 )
stretch_mode = 6

[node name="Resource3Bar" type="TextureProgress" parent="Container/HBoxContainer/HBoxContainer3"]
margin_left = 21.0
margin_right = 124.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource( 9 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
